syntax = "proto3";
option csharp_namespace = "GrpcService1";

message ProtoEmpty {}

service CustomerService {
  rpc AddCustomer (ProtoCustomer) returns (ProtoEmpty);
  rpc GetCustomerAge (CustomerRequest) returns (CustomerAgeResponse);
  rpc GetCustomersList (ProtoEmpty) returns (CustomersListResponse);
}

message ProtoCustomer {
    string id = 1;
    int32 birth_year = 2;
    int32 wallet_balance = 3;
    int32 total_cart = 4;
}

message CustomerRequest {
  string customer_id = 1;
}

message CustomerAgeResponse {
  repeated int32 ages = 1;
}
// ... (rest of the proto file remains the same)
message CustomersListResponse {
    repeated ProtoCustomer customers = 1;
}